# Netcup-DDNS

./: .example.env  Cargo.toml
src/: api.rs  cli.rs  errors.rs  main.rs  serialization.rs
src/api/: info_dns_records.rs  ip.rs  login.rs  logout.rs  netcup.rs  update_dns_records.rs
src/api/netcup/: info_dns_records.rs  info_dns_zone.rs  login.rs  logout.rs  models.rs  update_dns_records.rs  update_dns_zone.rs
src/api/netcup/models/: info_dns_records.rs  info_dns_zone.rs  login.rs  logout.rs  update_dns_records.rs  update_dns_zone.rs
