[package]
name = "netcup-dns-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
log = "0.4.17"
env_logger = "0.10.0"
error-stack = "0.3.0"
structopt = "0.3.26"
dotenv = "0.15.0"
serde_repr = "0.1.10"
serde_with = "2.2.0"
serde-aux = "4.1.2"
thiserror = "1.0.38"
public-ip = "0.2.2"
